fixed buy now button on mobile

--- a/src/sass/kits.scss
+++ b/src/sass/kits.scss
@@ -25,7 +25,4 @@
     }
   }
 
-  #image {
-    margin-left: -18em;
-  }
 }
